2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.addin.xml: Bump MD version.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.addin.xml: Removed the CommandService class.
	  Everything is done directly with CommandManager. Moved all extension
	  node types to MD.Components.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.addin.xml,
	  MonoDevelop.WebReferences.NodeBuilders/WebReferenceFolderNodeBuilder.cs,
	  MonoDevelop.WebReferences.NodeBuilders/WebReferenceNodeBuilder.cs,
	  MonoDevelop.WebReferences.mdp, Makefile.am: Reorganized the extension
	  point hierarchy. Embedded all add-in manifests as resources.

2007-08-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs: API
	  cleanup. Converted core services into regular classes.

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.NodeBuilders/WebReferenceFolderNodeBuilder.cs:
	  Converted DispatchService to a static class.

2007-07-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.addin.xml,
	  MonoDevelop.WebReferences.NodeBuilders/WebReferenceNodeBuilder.cs:
	  Declared missing extension point.

2007-06-06  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic,
	  MonoDevelop.WebReferences.Dialogs/WebReferenceDialog.cs: Made the
	  dialog internal.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.mdp: Copy the .addins.xml file to the
	  output dir.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am: Updated.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.mdp, Makefile.am: Reference shared
	  assemblies from the correct location.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.WebReferences.addin.xml, MonoDevelop.WebReferences.mdp,